Merge remote output_wiki.md, keep action-generated version
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>